Address all the review feedback. Alter response values for API. Added new exception handler/logic for NoContentException.